Add Prometheus host configuration and update docs
Introduces the ability to specify the Prometheus metrics host in the monitoring builder, configuration, and exporter. Updates extension methods and examples to support custom host binding for Prometheus metrics, improving flexibility and avoiding admin permission requirements. Enhances documentation with usage examples and best practices. Also updates project metadata and tags.

--- a/src/Zetian.AntiSpam/Zetian.AntiSpam.csproj
+++ b/src/Zetian.AntiSpam/Zetian.AntiSpam.csproj
@@ -41,7 +41,7 @@
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
-        <PackageTags>antispam;spam;filter;spf;dkim;dmarc;bayesian;rbl;dnsbl;greylisting;smtp;email;mail;server;smtp;zetian</PackageTags>
+        <PackageTags>antispam;spam;filter;spf;dkim;dmarc;bayesian;rbl;dnsbl;greylisting;smtp;email;mail;server;zetian</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
