--- a/src/Zetian.Monitoring/Zetian.Monitoring.csproj
+++ b/src/Zetian.Monitoring/Zetian.Monitoring.csproj
@@ -27,13 +27,13 @@
 
     <PropertyGroup>
         <ApplicationIcon>Resources\Zetian.ico</ApplicationIcon>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <AssemblyVersion>$(Version)</AssemblyVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>Zetian.Monitoring</Title>
         <PackageId>Zetian.Monitoring</PackageId>
         <Authors>Taiizor</Authors>
-        <Product>Zetian Monitoring Extension</Product>
+        <Product>Zetian SMTP Server - Monitoring</Product>
         <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
         <Summary>Comprehensive monitoring and metrics collection for Zetian SMTP Server with Prometheus and OpenTelemetry support.</Summary>
         <Description>Comprehensive monitoring and metrics collection for Zetian SMTP Server. Features include real-time metrics, Prometheus/Grafana integration, OpenTelemetry support, command-level statistics, and performance monitoring.</Description>
@@ -44,6 +44,7 @@
         <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
         <PackageTags>smtp;monitoring;metrics;prometheus;opentelemetry;grafana;observability;statistics;performance;zetian</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>git://github.com/Taiizor/Zetian</RepositoryUrl>
@@ -66,6 +67,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Zetian\Zetian.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.SourceLink.GitHub">
             <Version>10.0.0-beta.25514.2</Version>
             <PrivateAssets>All</PrivateAssets>
@@ -76,10 +81,6 @@
         <PackageReference Include="prometheus-net" Version="8.2.1" />
         <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.14.0-rc.1" />
         <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.13.1-beta.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\Zetian\Zetian.csproj" />
     </ItemGroup>
 
     <ItemGroup>
