Add OpenTelemetry exporter and integration
Introduces OpenTelemetryExporter for metrics and tracing, updates SmtpServerMonitoringExtensions to support OpenTelemetry, and adds an OpenTelemetry example. Refactors metrics model namespaces to Zetian.Monitoring.Models. Updates README with OpenTelemetry usage and configuration. Adds OpenTelemetryProtocol exporter package to project dependencies.

--- a/src/Zetian.Monitoring/Zetian.Monitoring.csproj
+++ b/src/Zetian.Monitoring/Zetian.Monitoring.csproj
@@ -80,6 +80,7 @@
     <ItemGroup>
         <PackageReference Include="prometheus-net" Version="8.2.1" />
         <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.14.0-rc.1" />
+        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.14.0-rc.1" />
         <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.13.1-beta.1" />
     </ItemGroup>
 
