Update NuGet package versions in project files
This commit updates several NuGet package references across multiple .csproj files to newer versions, including BenchmarkDotNet, Microsoft.Extensions.Logging.Console, AWSSDK.S3, Npgsql, StackExchange.Redis, Microsoft.Data.SqlClient, System.Threading.Channels, and Microsoft.Extensions.Logging.Abstractions. The changes ensure compatibility with newer frameworks and dependencies.

--- a/src/Storage/Zetian.Storage.Redis/Zetian.Storage.Redis.csproj
+++ b/src/Storage/Zetian.Storage.Redis/Zetian.Storage.Redis.csproj
@@ -77,7 +77,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="StackExchange.Redis" Version="2.9.32" />
+        <PackageReference Include="StackExchange.Redis" Version="2.9.99-gfe04f9c406" />
     </ItemGroup>
 
     <ItemGroup>
