--- a/examples/Zetian.Relay.Examples/Zetian.Relay.Examples.csproj
+++ b/examples/Zetian.Relay.Examples/Zetian.Relay.Examples.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.0-rtm.25513.102" />
     </ItemGroup>
 
 </Project>
