--- a/src/Storage/Zetian.Storage.PostgreSQL/Zetian.Storage.PostgreSQL.csproj
+++ b/src/Storage/Zetian.Storage.PostgreSQL/Zetian.Storage.PostgreSQL.csproj
@@ -62,7 +62,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Npgsql" Version="9.0.4" />
+        <PackageReference Condition="'$(TargetFramework)' == 'net6.0' OR '$(TargetFramework)' == 'net7.0'" Include="Npgsql" Version="9.0.4" />
+        <PackageReference Condition="'$(TargetFramework)' == 'net8.0' OR '$(TargetFramework)' == 'net9.0' OR '$(TargetFramework)' == 'net10.0'" Include="Npgsql" Version="10.0.0-rc.1" />
     </ItemGroup>
 
     <!-- Preserve types for JSON serialization -->
