--- a/src/Storage/Zetian.Storage.SqlServer/Zetian.Storage.SqlServer.csproj
+++ b/src/Storage/Zetian.Storage.SqlServer/Zetian.Storage.SqlServer.csproj
@@ -77,7 +77,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.2" />
+        <PackageReference Include="Microsoft.Data.SqlClient" Version="7.0.0-preview2.25289.6" />
     </ItemGroup>
 
     <ItemGroup>
