--- a/src/Zetian.Relay/Zetian.Relay.csproj
+++ b/src/Zetian.Relay/Zetian.Relay.csproj
@@ -77,7 +77,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="System.Threading.Channels" Version="9.0.10" />
+        <PackageReference Include="System.Threading.Channels" Version="10.0.0-rtm.25513.102" />
     </ItemGroup>
 
     <ItemGroup>
