--- a/src/Zetian/Zetian.csproj
+++ b/src/Zetian/Zetian.csproj
@@ -73,7 +73,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.10" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0-rtm.25513.102" />
     </ItemGroup>
 
     <ItemGroup>
