Add Zetian.Clustering module and example project
Introduces the Zetian.Clustering library with abstractions, enums, models, options, and implementation for clustered SMTP server management. Adds a comprehensive example project, Docker/Kubernetes deployment files, HAProxy config, Prometheus monitoring, and tests. Updates the solution and example projects to support clustering and .NET 10.0.

--- a/examples/Zetian.AntiSpam.Examples/Zetian.AntiSpam.Examples.csproj
+++ b/examples/Zetian.AntiSpam.Examples/Zetian.AntiSpam.Examples.csproj
@@ -1,14 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <OutputType>Exe</OutputType>
+        <LangVersion>preview</LangVersion>
+        <AnalysisLevel>preview</AnalysisLevel>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFramework>net10.0</TargetFramework>
+        <RootNamespace>Zetian.AntiSpam.Examples</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\Zetian\Zetian.csproj" />
         <ProjectReference Include="..\..\src\Zetian.AntiSpam\Zetian.AntiSpam.csproj" />
     </ItemGroup>
 
