--- a/src/Zetian.Clustering/Zetian.Clustering.csproj
+++ b/src/Zetian.Clustering/Zetian.Clustering.csproj
@@ -26,7 +26,7 @@
 
     <PropertyGroup>
         <ApplicationIcon>Resources\Zetian.ico</ApplicationIcon>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <AssemblyVersion>$(Version)</AssemblyVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>Zetian.Clustering</Title>
@@ -99,6 +99,10 @@
 
     <ItemGroup>
         <Folder Include="Properties\" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="Zetian.Clustering.Tests" />
     </ItemGroup>
 
 </Project>
