--- a/tests/Zetian.Clustering.Tests/Zetian.Clustering.Tests.csproj
+++ b/tests/Zetian.Clustering.Tests/Zetian.Clustering.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <Nullable>enable</Nullable>
@@ -10,6 +10,10 @@
         <TargetFramework>net10.0</TargetFramework>
         <RootNamespace>Zetian.Clustering.Tests</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\src\Zetian.Clustering\Zetian.Clustering.csproj" />
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Moq" Version="4.20.72" />
@@ -24,10 +28,6 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\..\src\Zetian.Clustering\Zetian.Clustering.csproj" />
     </ItemGroup>
 
 </Project>
