Remove unused package references from project files
Cleaned up several .csproj files by removing unnecessary or unused PackageReference entries, including logging, MessagePack, System.Threading.Channels, and OpenTelemetry packages. This reduces dependency bloat and streamlines project configuration.

--- a/examples/Zetian.Monitoring.Examples/Zetian.Monitoring.Examples.csproj
+++ b/examples/Zetian.Monitoring.Examples/Zetian.Monitoring.Examples.csproj
@@ -14,4 +14,8 @@
         <ProjectReference Include="..\..\src\Zetian.Monitoring\Zetian.Monitoring.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.0-rtm.25513.102" />
+    </ItemGroup>
+
 </Project>
