--- a/examples/Zetian.Clustering.Examples/Zetian.Clustering.Examples.csproj
+++ b/examples/Zetian.Clustering.Examples/Zetian.Clustering.Examples.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <Nullable>enable</Nullable>
@@ -15,7 +15,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0-rtm.25513.102" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.0-rtm.25513.102" />
     </ItemGroup>
 
