--- a/src/Zetian.WebUI/Zetian.WebUI.csproj
+++ b/src/Zetian.WebUI/Zetian.WebUI.csproj
@@ -1,34 +1,67 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFrameworks>net9.0</TargetFrameworks>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <!--<TargetFrameworks>net6.0;net7.0;net8.0;net9.0;net10.0</TargetFrameworks>-->
+        <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
         <RootNamespace>Zetian.WebUI</RootNamespace>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <IsPackable>true</IsPackable>
+        <TargetFramework>net9.0</TargetFramework>
+        <ImplicitUsings>disable</ImplicitUsings>
+        <DefaultLanguage>en-GB</DefaultLanguage>
         <OutputType>Library</OutputType>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <PropertyGroup>
-        <Version>1.0.0</Version>
+        <ApplicationIcon>Resources\Zetian.ico</ApplicationIcon>
+        <Version>1.0.1</Version>
         <AssemblyVersion>$(Version)</AssemblyVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>Zetian.WebUI</Title>
         <PackageId>Zetian.WebUI</PackageId>
         <Authors>Taiizor</Authors>
-        <Product>Zetian WebUI</Product>
+        <Product>Zetian SMTP Server - Web UI</Product>
         <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
         <Summary>Professional web-based management interface for Zetian SMTP Server with real-time monitoring and REST API.</Summary>
         <Description>A modern web-based management interface for Zetian SMTP Server featuring real-time monitoring, REST API, WebSocket support, and a responsive dashboard.</Description>
-        <PackageTags>smtp;email;mail;server;webui;dashboard;monitoring;management;api;rest;signalr;websocket</PackageTags>
+        <PackageReadmeFile>README.MD</PackageReadmeFile>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageLicenseExpression></PackageLicenseExpression>
+        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+        <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
+        <PackageTags>smtp;email;mail;server;webui;dashboard;monitoring;management;api;rest;signalr;websocket;zetian</PackageTags>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>git://github.com/Taiizor/Zetian</RepositoryUrl>
+        <PackageDescription>$(Description)</PackageDescription>
         <PackageIcon>Zetian.png</PackageIcon>
-        <PackageReadmeFile>README.MD</PackageReadmeFile>
-        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <Company>$(Authors)</Company>
+        <Owners>$(Authors)</Owners>
+        <AnalysisLevel>preview</AnalysisLevel>
+        <LangVersion>preview</LangVersion>
+        <NeutralLanguage>$(DefaultLanguage)</NeutralLanguage>
+        <FileVersion>$(Version)</FileVersion>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <Configurations>Debug;Release</Configurations>
+        <NoWarn>$(NoWarn);1591</NoWarn>
+        <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
     </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Zetian\Zetian.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub">
+            <Version>10.0.0-beta.25514.2</Version>
+            <PrivateAssets>All</PrivateAssets>
+        </PackageReference>
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
@@ -36,10 +69,6 @@
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.10" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.10" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\Zetian\Zetian.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -51,7 +80,7 @@
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
-        <None Include="..\Zetian\Resources\Zetian.png">
+        <None Include="Resources\Zetian.png">
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
