--- a/src/Zetian.WebUI/Zetian.WebUI.csproj
+++ b/src/Zetian.WebUI/Zetian.WebUI.csproj
@@ -8,6 +8,7 @@
         <ImplicitUsings>disable</ImplicitUsings>
         <DefaultLanguage>en-GB</DefaultLanguage>
         <OutputType>Library</OutputType>
+        <IsPackable>true</IsPackable>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
